<chore> 去除不必要的日志打印,hpa调整为禁止缩容

--- a/deploy/proxy-rust/templates/hpa.yaml
+++ b/deploy/proxy-rust/templates/hpa.yaml
@@ -14,11 +14,7 @@ spec:
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   behavior:
     scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-      - type: Pods
-        value: 0
-        periodSeconds: 60
+      selectPolicy: Disabled
     scaleUp:
       stabilizationWindowSeconds: 0
       policies:
